# CSE220-HW0

./: .gitignore  CMakeLists.txt
src/: hw0_main.c
